[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/player.png" type="Texture" id=1]
[ext_resource path="res://WallNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://art/square.png" type="Texture" id=4]
[ext_resource path="res://art/spot.png" type="Texture" id=5]
[ext_resource path="res://fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Barrier.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=4]
size = 100
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="CircleShape2D" id=2]
radius = 9.05539

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 150 )

[sub_resource type="AudioStreamMicrophone" id=5]

[node name="World" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = -0.037
anchor_top = -0.225
anchor_bottom = -0.204
margin_right = 39.52
margin_bottom = 120.4
rect_min_size = Vector2( 300, 100 )
rect_scale = Vector2( 0.25, 0.25101 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="PitchLabel" type="Label" parent="CanvasLayer"]
anchor_left = -0.037
anchor_top = 0.169
anchor_bottom = 0.172
margin_right = 39.52
margin_bottom = 120.4
rect_min_size = Vector2( 300, 100 )
rect_scale = Vector2( 0.25, 0.25101 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
modulate = Color( 0.443137, 0.890196, 1, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -304, 0 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
offset = Vector2( 1, 0 )
shadow_enabled = true

[node name="WallNode" parent="." instance=ExtResource( 2 )]
position = Vector2( 288, 0 )

[node name="WallNode2" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 32 )

[node name="WallNode3" parent="." instance=ExtResource( 2 )]
position = Vector2( 432, -8 )

[node name="WallNode4" parent="." instance=ExtResource( 2 )]
position = Vector2( 504, 8 )

[node name="WallNode5" parent="." instance=ExtResource( 2 )]
position = Vector2( 576, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 0.0645037, 4.00873 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
show_behind_parent = true
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 4 )

[node name="BarrierTop" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -154 )

[node name="BarrierBottom" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 154 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )
autoplay = true
bus = "Mic"

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
